--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -13,7 +13,7 @@ jobs:
       - name: checkout the repo
         uses: actions/checkout@v4
         with:
-          ref: test2
+          ref: master
 
       - name: set up docker buildx
         uses: docker/setup-buildx-action@v3
