--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -29,4 +29,6 @@ jobs:
         with:
           context: .
           push: true
-          tags: 06061991/angularschool:1.0.${{github.run_number}}
+          tags: |
+            06061991/angularschool:1.0.${{ github.run_number }}
+            06061991/angularschool:latest
