--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -21,14 +21,14 @@ jobs:
       - name: login to docker hub
         uses: docker/login-action@v3
         with:
-          username: ${{ vars.DOCKERHUB_USERNAME }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: build and push docker image
         uses: docker/build-push-action@v4
         with:
           context: .
-          push: false
+          push: true
           tags: |
             06061991/angularschool:1.0.${{ github.run_number }}
             06061991/angularschool:latest
