--- a/.githb/workflows/dockerhub.yml
+++ b/.githb/workflows/dockerhub.yml
@@ -29,6 +29,7 @@ jobs:
         with:
           context: .
           push: true
+          provenance: false
           tags: |
             06061991/angularschool:1.0.${{ github.run_number }}
             06061991/angularschool:latest
