--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -33,3 +33,5 @@ jobs:
           tags: |
             06061991/angularschool:1.0.${{ github.run_number }}
             06061991/angularschool:latest
+            cache-from: type=registry,ref=06061991/angularschool:buildcache
+          cache-to: type=inline
