--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -36,5 +36,5 @@ jobs:
         with:
            context: .
            push: true
-           provenance: False
+           provenance: false
            tags: ${{steps.meta.outputs.tags}}
