--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -5,7 +5,7 @@ on:
       - "v*.*.*"
 jobs:
   build_push_on_github-packages:
-    runs_on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - name: checkout the repo
         uses: actions/checkout@v4
