--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -33,7 +33,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.repository-owner }}
-          password: ${{ secrets.GHCR_TOKEN }}
+          password: ${{ secrets.GHCR_TOKEN1 }}
 
       - name: build and push docker image
         uses: docker/build-push-action@v4
