--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -32,7 +32,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.repository-owner }}
+          username: ${{ github.repository-asslam1991 }}
           password: ${{ secrets.GHCR_TOKEN1 }}
 
       - name: build and push docker image
