--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -15,7 +15,7 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: |
-            ghcr.io/asslam1991/04/angularschool
+            ghcr.io/asslam1991/04
           tags: |
             type=ref,event=branch
             type=ref,event=pr
