--- a/jenkinsfile
+++ b/jenkinsfile
@@ -30,8 +30,8 @@ pipeline {
 
         stage("Push Docker Image") {
             steps {
-                sh "docker push 06061991/04-app:1.1.${env.BUILD_NUMBER}"
-                sh "docker image rm 06061991/04-app:1.1.${env.BUILD_NUMBER}"
+                sh "docker push asslam1991/04-app:1.1.${env.BUILD_NUMBER}"
+                sh "docker image rm asslam1991/04-app:1.1.${env.BUILD_NUMBER}"
             }
         }
      }
