--- a/jenkinsfile
+++ b/jenkinsfile
@@ -18,7 +18,7 @@ pipeline {
 
         stage("Generate Docker Image") {
             steps {
-                sh "docker build -t 06061991/04-app:1.1.${env.BUILD_NUMBER} ."
+                sh "docker build -t asslam1991/04-app:1.1.${env.BUILD_NUMBER} ."
             }
         }
 
